kubernetes/prueba2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prueba2-app
  labels:
    app: prueba2
spec:
  containers:
  - name: prueba2nginx
    image: yoselalder/webnginx:latest

---

apiVersion: v1
kind: Service
metadata:
  name: prueba2-service
spec:
  selector:
    app: prueba2
  ports:
    - port: 80
