kubernetes/prueba2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prueba2-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prueba2.k8s.as
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prueba2-service
            port:
              number: 80
